--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <footer>
-        Copyright SAJAN  All rights reserved
+        Copyright all team   All rights reserved
     </footer>
 
 </body>
